# olympus-hermes

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
agent_cmd/: Cargo.toml
agent_cmd/src/: common.conf  main.rs
agent_cmd/src/models/: agent_config.rs  cmd_executor.rs  mod.rs
agent_file/: Cargo.toml
agent_file/src/: main.rs
agent_file/src/models/: agent_config.rs  mod.rs
agents/: failed_unit.py  hermes_cli.py  memory.py  storage.py
cli/: Cargo.toml
cli/src/: main.rs
docs/: Actions.md  CommandLine.md  Command_line.md  Configuration.md  Gitea_plugin.md  Interface_REST.md  Interface_classic.md  Interface_gRPC.md  Interface_websocket.md  README.md  Stored_procedures.md
hermes/: Cargo.toml  Dockerfile  build.rs  client_config.toml  config.toml  config_default.toml  history.txt  init_data.toml  main.conf  main_default.conf
hermes.old/src/: prod.conf
hermes.old/src/services/: agent.rs  grpc.rs  process.rs
hermes/crates/datastore-rs/: Cargo.toml  README.md
hermes/crates/datastore-rs/src/: lib.rs
hermes/crates/datastore-rs/src/datastore/: mod.rs
hermes/crates/datastore-rs/src/datastore/enums/: error.rs  mod.rs  pair.rs
hermes/crates/datastore-rs/src/datastore/utilities/: internal.rs  mod.rs
hermes/crates/datastore-rs/src/hook/: mod.rs
hermes/crates/datastore-rs/src/hook/enums/: mod.rs
hermes/crates/datastore-rs/src/hook/utilities/: mod.rs
hermes/crates/datastore-rs/src/logger/: mod.rs
hermes/crates/datastore-rs/src/logger/enums/: mod.rs
hermes/crates/datastore-rs/src/logger/utilities/: internal.rs  mod.rs
hermes/crates/datastore-rs/src/tests/: datastore.rs  hook_manager.rs  logger.rs  mod.rs
hermes/datastore-rs/: Cargo.toml  README.md
hermes/datastore-rs/src/: lib.rs
hermes/datastore-rs/src/datastore/: mod.rs  types.rs
hermes/datastore-rs/src/datastore/enums/: error.rs  mod.rs
hermes/datastore-rs/src/datastore/utilities/: mod.rs
hermes/datastore-rs/src/hook/: mod.rs  types.rs
hermes/datastore-rs/src/hook/enums/: mod.rs
hermes/datastore-rs/src/hook/utilities/: mod.rs
hermes/datastore-rs/src/logger/: mod.rs
hermes/datastore-rs/src/logger/enums/: mod.rs
hermes/datastore-rs/src/logger/utilities/: mod.rs
hermes/datastore-rs/src/tests/: datastore.rs  hook_manager.rs  logger.rs
hermes/docker/: docker-compose.yaml  entry.sh
hermes/docker/etc/: client.toml  config.toml
hermes/docker/var/: init.toml  log.txt
hermes/docker/var/lua/: simple_words.lua  test.lua
hermes/docker/var/lua/libs/: dummy.lua
hermes/lua-examples/: error_example.lua  gitea_parser.lua  test.lua  work_with_words.lua
hermes/lua-examples/libs/: words.lua
hermes/proto/: hermes.proto
hermes/src/: arg.rs  data_handler.rs  hermes_config.rs  main.conf  main.rs  network.rs  thread_pool.rs  utilities.rs
hermes/src/classic/: macros.rs  mod.rs  utilities.rs
hermes/src/cli/: arg.rs  config.rs  main.rs  mod.rs
hermes/src/common/websocket/: client.rs  mod.rs
hermes/src/group/: mod.rs
hermes/src/grpc/: macros.rs  mod.rs  utilities.rs
hermes/src/hooks/: mod.rs
hermes/src/interface_handler/: mod.rs
hermes/src/interfaces/: mod.rs
hermes/src/interfaces/classic/: macros.rs  mod.rs  utilities.rs
hermes/src/interfaces/grpc/: macros.rs  mod.rs  utilities.rs
hermes/src/interfaces/rest/: macros.rs  mod.rs  utilities.rs
hermes/src/item/: mod.rs
hermes/src/rest/: macros.rs  mod.rs  utilities.rs
hermes/src/server/: main.rs  mod.rs
hermes/src/server/interfaces/: mod.rs
hermes/src/server/interfaces/classic/: macros.rs  mod.rs  utilities.rs
hermes/src/server/interfaces/dummy/: mod.rs
hermes/src/server/interfaces/grpc/: macros.rs  mod.rs  utilities.rs
hermes/src/server/interfaces/rest/: macros.rs  mod.rs  utilities.rs
hermes/src/server/interfaces/websocket/: macros.rs  mod.rs  structs.rs  utilities.rs
hermes/src/server/utilities/: config_parse.rs  initial_parse.rs  lua.rs  mod.rs
hermes/src/services/: agent.rs  data.rs  grpc.rs  mod.rs  parser.rs  process.rs
hermes/src/shell/: mod.rs
hermes/src/shell/utilities/: args.rs
hermes/src/traits/: mod.rs
other/: agent_cmd.conf  agent_file.conf  common.conf  main.conf
other/agent_cmd.d/: agent_cmd.conf
other/agent_file.d/: agent_file.conf
stress/: Cargo.toml  build.rs
stress/src/: grcp.rs  grcp_get.rs  http_post.rs  main.rs  tcp_set.rs
