[package]
name = "agent_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"

