[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onlyati_config = { git = "https://git.thinkaboutit.tech/PublicProjects/config-rs", tag = "latest" }
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.2.7", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
