[package]
name = "hermes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
chrono = "0.4.24"
onlyati_datastore = { git = "https://git.thinkaboutit.tech/PublicProjects/datastore-rs" }
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "cors"] }
bytes = "1.4.0"
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.96"
reqwest = "0.11.18"
clap = { version = "4.2.7", features = ["derive"] }
toml = "0.7.4"
mlua = { version = "0.8.9", features = ["lua54", "vendored", "async"] }

[build-dependencies]
tonic-build = "0.9.2"
