[package]
name = "hermes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-extra = "0.7.4"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive", "string"] }
futures = "0.3.28"
futures-util = "0.3.28"
headers = "0.3.8"
mlua = { version = "0.8.9", features = ["lua54", "vendored", "async"] }
onlyati_datastore = { git = "https://git.thinkaboutit.tech/PublicProjects/datastore-rs" }
prost = "0.11.9"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "process", "signal"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "cors", "timeout"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
tokio-tungstenite = "0.19.0"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
regex = "1.8.4"
termion = "2.0.1"

[build-dependencies]
