[workspace.package]
version = "1.0.0"
edition = "2021"
repository = "https://git.thinkaboutit.tech/PublicProjects/olympus-hermes"

[workspace]
members = ["crates/datastore-rs"]

[workspace.dependencies]
onlyati_datastore = { path = "./crates/datastore-rs" }
bincode = { version = "1.3.3", features = ["i128"] }
chrono = "0.4.24"
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-extra = "0.7.4"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive", "string"] }
futures = "0.3.28"
futures-util = "0.3.28"
headers = "0.3.8"
mlua = { version = "0.8.9", features = ["lua54", "vendored", "async"] }
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "process", "signal"] }
tokio-test = "0.4.2"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "cors", "timeout"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
tokio-tungstenite = "0.19.0"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
regex = "1.8.4"
termion = "2.0.1"

[package]
name = "hermes"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
onlyati_datastore = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
rustyline = { workspace = true }
regex = { workspace = true }
termion = { workspace = true }
