[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stress"
path = "src/main.rs"

[[bin]]
name = "grcp"
path = "src/grcp.rs"

[[bin]]
name = "grcp_get"
path = "src/grcp_get.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
