[package]
name = "stress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stress"
path = "src/main.rs"

[[bin]]
name = "grcp"
path = "src/grcp.rs"

[[bin]]
name = "grcp_get"
path = "src/grcp_get.rs"

[[bin]]
name = "http_post"
path = "src/http_post.rs"

[[bin]]
name = "tcp_set"
path = "src/tcp_set.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.18", features = ["json"]  }
bufstream = { version = "0.1.4", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.8"
